# blood

.github/workflows/: main.yml
project basic/: CMakeLists.txt
project basic/src/: globals.h  gui.cpp  gui.h  hacks.h  main.cpp  memory.cpp  memory.h
